--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+            <div>
+                <img id="penny" src="assets/images/penny-heads.jpg" alt="penny-image">
+            </div>
+        <h3 class="message-container"> Lets get rolling</h3>
+            <div class="controls">
+                <button id="flip">Flip The Penny!</button>
+                <button id="clear">Clear Scoreboard</button>
+            </div>
+
             <hr>
             <div>
                 <h2>Scoreboard</h2>
