--- a/index.html
+++ b/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
-// Noah and Ryleigh photo flipper
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Penny Flip Game</title>
+    <title>Cute Kid Game</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
     <main>
-        <H1>Penny Flip Game</H1>
+        <H1>Cute Kid Game</H1>
         <div>
             <div>
-                <img id="penny" src="assets/images/penny-heads.jpg" alt="penny-image">
+                <img id="photo" src="assets/images/kids.jpg" alt="kid-image">
             </div>
-        <h3 class="message-container"> Lets get rolling</h3>
+        <h3 class="message-container"> Lets Find The Cutest Kid</h3>
             <div class="controls">
-                <button id="flip">Flip The Penny!</button>
-                <button id="clear">Clear Scoreboard</button>
+                <button id="flip">Flip The Photos!</button>
+                <button id="clear">Clear The Cute Tracker</button>
             </div>
 
             <hr>
             <div>
-                <h2>Scoreboard</h2>
+                <h2>Cute Tracker</h2>
                 <table>
                     <thead>
                         <tr>
-                            <th>Number of Heads</th>
-                            <th>Percentage Heads</th>
-                            <th>Number of Tails</th>
-                            <th>Percentage Tails</th>
+                            <th>Noah</th>
+                            <th>Percentage Noah</th>
+                            <th>Ryleigh</th>
+                            <th>Percentage Ryleigh</th>
                         </tr>
                     </thead>
                     <tbody>
